--- a/app/package.json
+++ b/app/package.json
@@ -9,10 +9,13 @@
 		"prepare": "svelte-kit sync"
 	},
 	"type": "module",
-	"dependencies": {
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-netlify": "^1.0.0-next.66",
-        "@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"svelte": "^3.44.0"
+	},
+	"dependencies": {
+		"llhttp": "^1.0.1"
 	}
 }
