--- a/app/package.json
+++ b/app/package.json
@@ -1,21 +1,24 @@
 {
-	"name": "app",
-	"version": "0.0.1",
-	"scripts": {
+  "name": "app",
+  "version": "1.0.0",
+  "description": "Everything you need to build a Svelte project, powered by [`create-svelte`](https://github.com/sveltejs/kit/tree/master/packages/create-svelte).",
+  "main": "svelte.config.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+    "scripts": {
 		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"package": "svelte-kit package",
-		"preview": "svelte-kit preview",
-		"prepare": "svelte-kit sync"
+		"build": "rm -rf build && svelte-kit build && touch .svelte-kit/static/build/.nojekyll",
+		"start": "svelte-kit start",
+		"deploy": "npm run build && npx gh-pages -d .svelte-kit/static/build -t true"
 	},
-	"type": "module",
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/adapter-netlify": "^1.0.0-next.66",
-		"@sveltejs/kit": "next",
-		"svelte": "^3.44.0"
-	},
-	"dependencies": {
-		"llhttp": "^1.0.1"
-	}
+  "devDependencies": {
+    "@sveltejs/adapter-netlify": "^1.0.0-next.66",
+    "@sveltejs/kit": "^1.0.0-next.357",
+    "svelte": "^3.48.0"
+  },
+  "type": "module"
 }
