--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
     "scripts": {
 		"dev": "svelte-kit dev",
-		"build": "rm -rf build && svelte-kit build && touch .svelte-kit/static/build/.nojekyll",
+		"build": "svelte-kit build",
 		"start": "svelte-kit start",
 		"deploy": "npm run build && npx gh-pages -d .svelte-kit/static/build -t true"
 	},
