--- a/app/package.json
+++ b/app/package.json
@@ -18,5 +18,8 @@
     "@sveltejs/kit": "^1.0.0-next.357",
     "svelte": "^3.48.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "mongodb": "^4.7.0"
+  }
 }
